feat: Update rate limit to trust reverse proxies and get ip from X-Forwarded-For instead of the proxy's ip, improved error messages, add change password endpoint, tests for the proxy, docker build flow, add app to docker compose and code review
